# 2024.2_G5_Funcional_Forca

./: .gitignore  CHANGELOG.md  G5-Forca.cabal  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-issue-template.md
app/: Main.hs
db/: palavras.txt
src/: ChooseWord.hs  GameLogic.hs  GameResult.hs  GameState.hs  RenderState.hs
