cabal-version:      3.0

name:               G5-Forca
version:            0.1.0.0
synopsis:           Jogo da forca
license:            MIT
license-file:       LICENSE
author:             G5
maintainer:         viniciusroriz21@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  GameState
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable G5-Forca
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        G5-Forca
    hs-source-dirs:   app
    default-language: Haskell2010
